// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom class 1`] = `
<span
  className="Pinpoint Changelog Card Date test-custom"
>
  12/31/1969
</span>
`;

exports[`Test default state 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  12/31/1969
</span>
`;

exports[`Test default state with custom timestamp 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  7/29/2021
</span>
`;

exports[`Test full format 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  December 31, 1969
</span>
`;

exports[`Test full format with custom timestamp 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  July 29, 2021
</span>
`;

exports[`Test huge format 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  Wednesday, December 31, 1969, 6:00:00 PM Central Standard Time
</span>
`;

exports[`Test huge format with custom timestamp 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  Thursday, July 29, 2021, 11:10:55 AM Central Daylight Time
</span>
`;

exports[`Test time format 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  12/31/1969, 6:00 PM
</span>
`;

exports[`Test time format with custom timestamp 1`] = `
<span
  className="Pinpoint Changelog Card Date "
>
  7/29/2021, 11:10 AM
</span>
`;
